# libpwquality

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  configure.ac  libpwqualityex.spec.in
doc/man/: pam_pwquality.8.pod  pwquality.conf.5.pod
po/: libpwqualityex.pot  libpwqualityexex.pot
python/: Makefile.am  setup.py.in
src/: Makefile.am  check.c  error.c  pwqprivate.h  pwquality.conf  pwquality.h  pwqualityex.pc.in  settings.c  version.c
